--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ body {
     /* scrollbar-width: 0; */
 
 }
+#rect{
+    height: 40px;
+    width: 50%;
+    /* background: #000; */
+    position: fixed;
+    top: 50%;
+    right: 0;
+    border-radius: 10px;
+    transform: translateY(-50%);
+}
+#rect .aro-icon{
+    position: absolute;
+    transform: translateY(-10%);
+    right: 15%;
+    /* box-shadow: 0px 10px 30px -10px rgba(46, 114, 219, 1) ; */
+}
 .mob-menu-wrap{
     position: fixed;
     width: 100%;
